--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "jest-dom": "^2.1.0",
     "jest-enzyme": "^7.0.0"
